[package]
name = "swasm"
version = "0.31.3"
authors = ["Nikolay Volf <nikvolf@gmail.com>", "Svyatoslav Nikolsky <svyatonik@yandex.ru>", "Sergey Shulepov <s.pepyakin@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/susytech/swasm"
homepage = "https://github.com/susytech/swasm"
documentation = "https://susytech.github.io/swasm/swasm/"
description = "WebAssembly binary format serialization/deserialization/interpreter"
keywords = ["wasm", "webassembly", "bytecode", "serde", "interpreter"]
categories = ["wasm", "parser-implementations"]
exclude = [ "res/*", "spec/*" ]

[dependencies]
byteorder = { version = "1.0", default-features = false }

[dev-dependencies]
time = "0.1"

[features]
default = ["std"]
std = ["byteorder/std"]
