[package]
name = "swasm-testsuite"
version = "0.0.0"
authors = ["NikVolf <nikvolf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/nikvolf/swasm"
homepage = "https://github.com/nikvolf/swasm"
description = "swasm testsuite"

[dependencies]
wabt = "0.2"
swasm = { path = ".." }
